# libhumancode

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: create-draft-python-release-on-tag.yml  download-libhumancode-release-assets.py  publish-to-pypi-on-release.yml  tag.yml
bindings/py/: Cargo.toml  README.md  build-all.sh  build-linux-wheels.sh  old.build-all.sh  pyproject.toml
bindings/py/build-scripts/: build-aarch64-unknown-linux-gnu.sh  build-armv7-unknown-linux-gnueabihf.sh  build-i686-unkown-linux-gnu.sh  build-x86_64-unknown-linux-gnu.sh  old.build-armv7-unknown-linux-gnueabihf.sh
bindings/py/docker/: Dockerfile
bindings/py/docker-aarch64/: cargo-config.toml
bindings/py/docker-arm7/: cargo-config.toml
bindings/py/docker-maturin-cross/: Dockerfile
bindings/py/docker-x86/: Dockerfile
bindings/py/docker2/: Dockerfile
bindings/py/docker3/: Dockerfile  cargo-config.toml
bindings/py/src/: lib.rs
src/: decode_chunk.rs  encode_chunk.rs  error.rs  lib.rs  smallbytebuf.rs  tests.rs
